--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,23 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bootit
 spring.datasource.username=root
 spring.datasource.password=1128
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.database=MYSQL
-# Show or not log for each sql query
-spring.jpa.show-sql=true
-# Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto=update
-# Naming strategy
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-# stripped before adding them to the entity manager)
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.jpa.database=MYSQL
+## Show or not log for each sql query
+#spring.jpa.show-sql=true
+## Hibernate ddl auto (create, create-drop, update)
+#spring.jpa.hibernate.ddl-auto=update
+## Naming strategy
+#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+## stripped before adding them to the entity manager)
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #redis≈‰÷√
 spring.redis.host=localhost
 spring.redis.port=6379
 #spring.redis.password=abcd1234
 spring.redis.database=3
 server.port=8181
+#web.upload-path=D:/ddqq/
+#spring.mvc.static-path-pattern=/**
+#spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path}
