--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         <!--redis增加-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-redis</artifactId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <!--redis管理session-->
         <dependency>
@@ -92,6 +92,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
+            <version>1.0.29</version>
         </dependency>
     </dependencies>
 
